[package]
name = "fallblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
tokio = { version = "1", features = ["full", "tracing"] }
futures = { version = "0.3" }

# errors
thiserror = "1"

# io
tokio-util = { version = "0.6", features = ["full"] }
bytes = "1"
byteorder = "1"

# logging
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"

# utils
lazy_static = "1"
sha2 = "0.10.2"
hmac = "0.12.1"

# data
uuid = { version = "0.8", features = ["v3", "serde"] } # UUIDv3 allows generating a UUID from an MD5, which is how offline mode uuids work
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitvec = "1"

# NBT
hematite-nbt = "0.5"
# JSON Chat format
mc_chat = { version = "0.3", features = ["serde"] }
